--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- add your code here -->
+	 <ol id="todoList"></ol>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
