--- a/main.html
+++ b/main.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dom</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- add your code here -->
-	 <ol id="todoList"></ol>
-	<script type="text/javascript" src="./script.js"></script>
+    <h3 class="heading">Dom Element</h3>
+    <h3 id="second">I am second h3</h3>
+    <p id="p-second"></p>
+    <div id="div-1" onclick="randomFunction()">
+        <p>I am </p>
+        <span>I am span</span>
+        <!-- <button>Click Me</button> -->
+    </div>
+    
+    <div>hjdkj</div>
+    <div id="parent">
+        <span>i am span1</span>
+        <span id="span2">i am span2</span>
+    </div>
+    <button id="btn"> Show alert</button>
+    <script  src="./script.js"></script>
 </body>
 </html>
